test/error/DocCodeUnterminated.ci
public static class Test
{
	/// Returns `true //ERROR: Unterminated code in documentation comment
	public static bool Run() => true;
}
